# nils-alfredworkflow

./: AGENT_DOCS.toml  ALFRED_WORKFLOW_DEVELOPMENT.md  BINARY_DEPENDENCIES.md  Cargo.toml  DEVELOPMENT.md  README.md  THIRD_PARTY_LICENSES.md  THIRD_PARTY_NOTICES.md  TROUBLESHOOTING.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
crates/alfred-plist/: README.md
crates/google-cli/: Cargo.toml  README.md
crates/google-cli/docs/: README.md  auth-setup-guide.md  auth.md  drive.md  gmail.md
crates/google-cli/docs/features/: auth.md  drive.md  gmail.md
crates/google-cli/src/: error.rs  lib.rs  main.rs  output.rs  runtime.rs
crates/google-cli/src/auth/: README.md  account.rs  browser.rs  callback.rs  config.rs  credentials.rs  defaults.rs  mod.rs  oauth.rs  store.rs
crates/google-cli/src/cmd/: auth.rs  common.rs  drive.rs  gmail.rs  mod.rs
crates/google-cli/src/drive/: README.md  client.rs  download.rs  mime.rs  mod.rs  read.rs  upload.rs
crates/google-cli/src/gmail/: README.md  client.rs  mime.rs  mod.rs  read.rs  send.rs  thread.rs
crates/google-cli/tests/: account_resolution_shared.rs  auth_account_resolution.rs  auth_cli_contract.rs  auth_oauth_flow.rs  auth_storage.rs  cli_contract.rs  drive_cli_contract.rs  drive_download.rs  drive_read.rs  drive_upload.rs  gmail_cli_contract.rs  gmail_read.rs  gmail_send.rs  gmail_thread.rs  native_dependency_probe.rs  native_no_gog.rs
crates/google-cli/tests/common/: mod.rs  native_drive.rs  native_gmail.rs
crates/google-cli/tests/fixtures/: fake_gog.sh
crates/market-cli/: README.md
crates/memo-workflow-cli/: Cargo.toml  README.md
crates/memo-workflow-cli/docs/: workflow-contract.md
crates/steam-cli/: Cargo.toml  README.md
crates/steam-cli/docs/: README.md  workflow-contract.md
crates/steam-cli/src/: config.rs  feedback.rs  lib.rs  main.rs  steam_store_api.rs
crates/steam-cli/tests/: cli_contract.rs
crates/weather-cli/: Cargo.toml  README.md
crates/weather-cli/docs/: workflow-contract.md
crates/weather-cli/src/: lib.rs  main.rs  weather_icon.rs
crates/workflow-cli/: README.md
crates/workflow-common/: README.md
crates/workflow-readme-cli/: README.md
docs/: ARCHITECTURE.md  PACKAGING.md  RELEASE.md
docs/plans/: google-cli-native-rust-replacement-plan.md  google-cli-rust-wrapper-plan.md  google-service-auth-workflow-plan.md  release-third-party-licenses-automation-plan.md  steam-search-workflow-plan.md  workflow-shared-foundations-plan.md
docs/reports/: cli-command-inventory.md  docs-ownership-matrix.md  google-cli-native-crate-survey.md  google-cli-native-gap-analysis.md  google-cli-native-validation-report.md  google-cli-validation-report.md  steam-search-validation-report.md  workflow-script-inventory.md
docs/specs/: cli-error-code-registry.md  cli-standards-mapping.md  crate-docs-placement-policy.md  google-cli-native-contract.md  google-cli-wrapper-contract.md  script-filter-input-policy.json  script-filter-input-policy.md  steam-search-workflow-contract.md  third-party-artifacts-contract-v1.md  third-party-license-artifact-contract-v1.md  workflow-script-refactor-contract.md  workflow-shared-foundations-policy.md
release/: crates-io-publish-order.txt
scripts/: docs-placement-audit.sh  generate-third-party-artifacts.sh  generate-third-party-licenses.sh  local-pre-commit.sh  market-cli-live-smoke.sh  workflow-clear-quarantine.sh  workflow-lint.sh  workflow-pack.sh  workflow-shared-foundation-audit.sh  workflow-test.sh
scripts/ci/: build-release-bundle.sh  ci-bootstrap.sh  markdownlint-audit.sh  release-bundle-third-party-audit.sh  third-party-licenses-audit.sh
scripts/lib/: codex_cli_version.sh  script_filter_async_coalesce.sh  script_filter_cli_driver.sh  script_filter_search_driver.sh  workflow_action_requery.sh  workflow_catalog.sh  workflow_smoke_helpers.sh
scripts/tests/: docs_placement_audit.test.sh  script_filter_async_coalesce.test.sh  script_filter_cli_driver.test.sh  workflow_action_requery.test.sh  workflow_catalog.test.sh  workflow_pack.test.sh  workflow_smoke_adoption.test.sh  workflow_smoke_helpers.test.sh
tests/third-party-artifacts/: generator.test.sh
tests/third-party-licenses/: audit.test.sh  generator.test.sh  release-bundle.test.sh
workflows/_template/: README.md  TROUBLESHOOTING.md
workflows/bangumi-search/: README.md  TROUBLESHOOTING.md  workflow.toml
workflows/bilibili-search/: README.md  TROUBLESHOOTING.md  workflow.toml
workflows/cambridge-dict/: README.md  (+2 more)
(+143 files in other folders)
