[package]
name = "google-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust wrapper over gog for auth, Gmail, and Drive commands."

[lib]
name = "google_cli"
path = "src/lib.rs"

[[bin]]
name = "google-cli"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
