[package]
name = "nils-memo-workflow-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Workflow adapter CLI for memo capture actions in Alfred."

[lib]
name = "memo_workflow_cli"
path = "src/lib.rs"

[[bin]]
name = "memo-workflow-cli"
path = "src/main.rs"

[dependencies]
alfred-core = { package = "nils-alfred-core", path = "../alfred-core", version = "1.0.3" }
clap.workspace = true
nils-memo-cli = "=0.6.5"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
